--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dynamic = [
 dependencies = [
     "aa-blueprints>=1.7",
     "allianceauth>=4.3.1,<5",
+    "django-esi>=8.2.2",
     "django-eveuniverse>=1.5.4",
 ]
 urls.Changelog = "https://github.com/Dusty-Meg/aa-wizardindustry-plugin/blob/master/CHANGELOG.md"
